--- a/image.yaml
+++ b/image.yaml
@@ -2,8 +2,7 @@
 
 schema_version: 1
 
-#from: "registry.access.redhat.com/ubi9/ubi:9.4"
-from: "registry.redhat.io/devspaces/udi-rhel8"
+from: "registry.access.redhat.com/ubi9/ubi:9.4"
 name: &name "developer-base"
 version: &version "1.0"
 description: "Developer base image for Red Hat OpenShift Dev Spaces"
